# image-product-search

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
qdrant_search/: Dockerfile  application.py
search/: Dockerfile  application.py
ui/: Dockerfile  application.py
